# AccountMs/AccountMs/src/main/java/com/danny/AccountMs/model/Account.java
@@ -21,5 +21,5 @@ public class Account {
     private String numeroCuenta ;
     private Double saldo;
     private TipoCuenta tipoCuenta;
-    private UUID clientId;
+    private UUID clienteId;
 }
